# Renox

./: .gitignore  .prettierrc  OFFLINE_SECURITY.md  PERMISSIONS.md  README.md  SECURITY_AUDIT.md  eslint.config.js  package.json  svelte.config.js  vite.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: tsconfig.json
src/lib/components/: ActivityLog.svelte  Button.svelte  Card.svelte  ConfirmationModal.svelte  ConsentModal.svelte  CustomSelect.svelte  ErrorReportModal.svelte  GameGrid.svelte  Input.svelte  LazyImage.svelte  LockScreen.svelte  PermissionGuard.svelte  ProfileCard.svelte  SettingsSidebar.svelte  ToastContainer.svelte  ToggleSwitch.svelte  Tooltip.svelte  index.ts
src/lib/data/: changelog.json  games.ts
src/lib/stores/: activityLogStore.ts  appSettings.ts  appStatus.ts  cheatStore.ts  confirmationStore.ts  errorLogStore.ts  filterStore.ts  lockStore.ts  managementStore.ts  toastStore.ts  userStore.ts  versionStore.ts
src/lib/types/: displayItem.ts  permissions.ts
src/lib/utils/: auditLogger.ts  crypto.ts  getStatusColor.ts  i18n.ts  offlineSecurity.ts  permissionTest.ts  routeGuard.ts  secureStorage.ts  sessionManager.ts
src/locales/: de.json  en.json  es.json  fr.json  pt.json
src/routes/: +layout.svelte  +page.svelte
src/routes/admin/: +page.svelte
src/routes/auth/: +page.svelte
src/routes/changelog/: +page.svelte
src/routes/cheats/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/status/: +page.svelte
(+8 files in other folders)
